--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -73,7 +73,7 @@
 	keys: on_off_key {
 		compatible = "gpio-keys";
 		soft_off_key: soft_off_key {
-			gpios = <&gpio1  6 (GPIO_ACTIVVEV_LOW | GPIO_PULL_DOWN)>;
+			gpios = <&gpio1  6 (GPIO_ACTIVE_LOW | GPIO_PULL_DOWN)>;
 		};
 	};
 
