--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -86,7 +86,7 @@
 	wakeup_source: wakeup_source {
 		compatible = "zmk,gpio-key-wakeup-trigger";
 
-		trigger = <&on_off_key>;
+		trigger = <&soft_off_key>;
 		wakeup-source;
 	};
 };
