--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -73,7 +73,7 @@
 	keys: on_off_key {
 		compatible = "gpio-keys";
 		soft_off_key: soft_off_key {
-			gpios = <&gpio1  6 (GPIO_ACTIVE_LOW | GPIO_PULL_DOWN)>;
+			gpios = <&gpio1  6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 		};
 	};
 
@@ -137,8 +137,8 @@
 	status = "okay";
 	compatible = "nordic,nrf-twim";
 	pinctrl-0 = <&i2c0_default>;
-    pinctrl-1 = <&i2c0_sleep>;
-    pinctrl-names = "default", "sleep";
+    	pinctrl-1 = <&i2c0_sleep>;
+    	pinctrl-names = "default", "sleep";
 	clock-frequency = <100000>;
 
 	fuelgauge: max17048@36 {
