--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2_defconfig
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2_defconfig
@@ -39,6 +39,9 @@ CONFIG_ZMK_PM_SOFT_OFF=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_LOG=y
