Change kscan phandle

--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -74,7 +74,7 @@
 	side_band_behavior_triggers: side_band_behavior_triggers {
         compatible = "zmk,kscan-sideband-behaviors";
         wakeup-source;
-        kscan = <&kscan>;
+        kscan = <&kscan0>;
         soft_off {
             column = <8>;
             row = <13>;
