--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -88,6 +88,13 @@
 		control-gpios = <&gpio0 17 GPIO_ACTIVE_HIGH>;
 	};
 
+	wakeup_source: wakeup_source {
+		compatible = "zmk,gpio-key-wakeup-trigger";
+
+		trigger = <&hw_soft_off>;
+		wakeup-source;
+	};
+
 	behaviors {
         hw_soft_off: hw_soft_off {
             compatible = "zmk,behavior-soft-off";
