--- a/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
+++ b/config/boards/arm/tkl_ffc_w2/tkl_ffc_w2.dts
@@ -85,7 +85,7 @@
 	keys {
         compatible = "gpio-keys";
         soft_off_key: soft_off_key {
-            gpios = <&gpio0 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
+            gpios = <&gpio1  6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
         };
     };
 
